<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_header"
    android:background="@drawable/bg_header"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingTop="5dp">

    <TextView
        style="@style/TextHeader"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@style/TextHeader"

        android:text="@string/by"
        android:textColor="@color/white" />

    <TextView
        style="@style/TextHeader"
        android:id="@+id/version"
        android:text="@string/ver"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>

