<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="@dimen/corner_radius_item_image"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_file_size"
                android:autoSizeTextType="uniform"
                android:textSize="25dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="10">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desired_file_size"
                        android:textColor="@color/color_text" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:id="@+id/edtSize"
                        android:inputType="number"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/bg_tab_unselected"
                        android:hint="@string/size"
                        android:padding="5sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_unit"
                        android:textColor="@color/color_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="5sp"
                        android:background="@drawable/stroke"
                        android:hint="@string/size"
                        android:padding="5sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:id="@+id/btnCompress"
                android:text="@string/compress"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>